--- a/src/assets/css/myshop.scss
+++ b/src/assets/css/myshop.scss
@@ -674,7 +674,6 @@
 		}
 	}
 	.myshop__roundbox--coupon {
-
 		.form {
 			.form__msg {
 				&:not(:first-child) {
@@ -1546,6 +1545,8 @@
 			color: #010101;
 		}
 		.coupon__date {
+			padding-left: 1vw;	
+			padding-right: 1vw;
 			font-size: 20px;
 		}
 	}
@@ -3565,5 +3566,23 @@
 			}
 		}
 	}
+}
 
+
+.myshop_couponwrap {
+	display: flex;
+	gap: 10px;
+	position: relative;
+	.myshop_coupon-aside {
+		// position: absolute;
+		width: 360px;
+	}
+	@include breakpoints.mobile() {
+		flex-direction: column-reverse;
+		box-sizing: content-box;
+		.myshop_coupon-aside{
+			width: 100%;
+			padding: 0 4vw;
+		}
+	}
 }
