--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -942,16 +942,16 @@
 				width: 170px;
 				height: 63px;
 				border-width: 3px;
-				border-color: #fff;
-				background-color: #fff;
-				color: #000;
+				// border-color: #fff;
+				// background-color: #fff;
+				// color: #000;
 				font-size: 28px;
 				letter-spacing: 0;
-				&:hover {
-					background-color: #fff;
-					color: #000;
-					mix-blend-mode: initial;
-				}
+				// &:hover {
+				// 	background-color: #fff;
+				// 	color: #000;
+				// 	mix-blend-mode: initial;
+				// }
 			}
 		}
 		.menu__category--outer {
